@@ -14,7 +14,7 @@ public class GeneralControllerAdvisor {
                 .body(new ExceptionResponse(
                         HttpStatus.BAD_REQUEST.toString(),
                         HttpStatus.BAD_REQUEST.value(),
-                        exception.getBindingResult().getAllErrors().get(0).getDefaultMessage(),
+                        exception.getBindingResult().getAllErrors().getFirst().getDefaultMessage(),
                         java.time.LocalDateTime.now(),
                         "METHOD_ARGUMENT_NOT_VALID_EXCEPTION"
                 ));
